--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-{
-	language: "csharp",
-	solution: "TextSearch.sln",
-	mono: "none",
-	dotnet: "1.1",
-	script: {
-		"dotnet restore"
-	}
-}
+language: csharp
+dist: trusty
+mono: none
+dotnet: 1.0.1
+install:
+- dotnet restore
+script:
+- dotnet build
+- dotnet test TestLibrary/TestLibrary.csproj
