--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 mono: none
 dotnet: 1.0.1
 install:
-- dotnet restore
+before_script:
+  - dotnet restore
 script:
-- dotnet build
-- dotnet test TestLibrary/TestLibrary.csproj
+  - dotnet test TestLibrary/TestLibrary.csproj
